k8s/fastapi-frontend/fastapi-frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-frontend-deployment
  labels:
    app: fastapi-frontend-deployment
  namespace: fastapi-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-frontend-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fastapi-frontend-deployment
      namespace: fastapi-frontend
    spec:
      containers:
        - name: fastapi-frontend
          image: 'tqhung0105/fastapi-frontend:latest'
          ports:
            - containerPort: 80
              name: http
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-frontend-clusterip
  namespace: fastapi-frontend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: fastapi-frontend-deployment
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-frontend-ingress
  namespace: fastapi-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-frontend-clusterip
                port:
                  number: 80
